--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: honeywell_scanner
 description: A Flutter plugin for barcode scanning with Honeywell PDAs.
-version: 0.0.3
-author:
-homepage:
+version: 0.0.4
+author: Luis <luis901101@gmail.com>
+homepage: https://pub.dev/packages/honeywell_scanner
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
