--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: honeywell_scanner
 description: A Flutter plugin for barcode scanning with Honeywell PDAs.
-version: 0.0.4
+version: 1.0.0+1
 author: Luis <luis901101@gmail.com>
 homepage: https://pub.dev/packages/honeywell_scanner
 
