--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,7 +16,18 @@ rootProject.allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "${System.env.HOME}/.youradeptsolutions/repository" }
+/**
+ * The android project which is going to use this plugin library should define flatDir in its
+ * gradle allProjects closure, exactly as below
+
+        flatDir {
+            dirs 'libs'
+        }
+
+ * Then the honeywell.aar file should be copied to the android/app/libs/ folder inside the
+ * android project sources.
+ * This will allow the plugin to locate the honeywell.aar library.
+ */
     }
 }
 
@@ -40,5 +51,6 @@ android {
 }
 
 dependencies {
-    implementation 'com.youradeptsolutions:honeywellpda:1.00.00.0085'
+//    implementation 'com.youradeptsolutions:honeywellpda:1.00.00.0085'
+    implementation(name:'honeywell', ext:'aar')
 }
