--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -13,7 +13,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "${System.env.HOME}/.youradeptsolutions/repository" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
