--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: honeywell_scanner
 description: This is a plugin to scan barcodes by using [Honeywell](https://www.honeywellaidc.com/products/barcode-scanners) PDA Android devices.
-version: 1.0.0+2
-author: Luis <luis901101@gmail.com>
+version: 1.0.1+3
 homepage: https://pub.dev/packages/honeywell_scanner
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
+  flutter: ">=1.12.13+hotfix.5 <2.0.0"
 
 dependencies:
   flutter:
@@ -20,13 +20,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The androidPackage and pluginClass identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
-    androidPackage: com.plugin.flutter.honeywell_scanner
-    pluginClass: HoneywellScannerPlugin
+    platforms:
+      android:
+        package: com.plugin.flutter.honeywell_scanner
+        pluginClass: HoneywellScannerPlugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
