--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -13,9 +13,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-        flatDir {
-            dirs 'libs'
-        }
+//        flatDir {
+//            dirs 'libs'
+//        }
     }
 }
 
