--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,5 +1,5 @@
 include ':app'
-include ':app', ':honeywell'
+include ':honeywell'
 
 def flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
 
