- Android plugin API updated to support v2 Embedding while remaining compatible with apps that don’t use the v2 Android embedding.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  honeywell_scanner:
+    path: ../
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
-  honeywell_scanner:
-    path: ../
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
