--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: honeywell_scanner
 description: This is a plugin to scan barcodes by using [Honeywell](https://www.honeywellaidc.com/products/barcode-scanners) PDA Android devices.
-version: 3.1.1+8
-homepage: https://pub.dev/packages/honeywell_scanner
+version: 3.1.2+9
+homepage: https://github.com/luis901101/honeywell_scanner
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -10,11 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
