--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,25 +4,27 @@ version '1.0-SNAPSHOT'
 buildscript {
     repositories {
         google()
-        jcenter() //JCenter will be removed on February 1, 2022.
+        mavenCentral()
+//        jcenter() //JCenter will be removed on February 1, 2022.
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter() //JCenter will be removed on February 1, 2022.
+        mavenCentral()
+//        jcenter() //JCenter will be removed on February 1, 2022.
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 19
