--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,18 +1,20 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+//        jcenter() //JCenter will be removed on February 1, 2022.
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+//        jcenter() //JCenter will be removed on February 1, 2022.
 //        flatDir {
 //            dirs 'libs'
 //        }
