- Added support of namespace property to support Android Gradle Plugin (AGP) 8. Projects with AGP < 4.2 should be compatible as well but it is highly recommended to update at least to AGP 7.0 or newer. - Example project updated to work with AGP 8

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: honeywell_scanner
 description: This is a plugin to scan barcodes by using Honeywell PDA Android devices.
-version: 4.0.0+14
+version: 5.0.0+1
 homepage: https://github.com/luis901101/honeywell_scanner
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.22.0"
+  sdk: ">=2.18.0 <4.0.0"
+  flutter: '>=1.22.0'
 
 dependencies:
   flutter:
