--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:8.1.2'
     }
 }
 
@@ -24,7 +24,11 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 31
+    // Conditional for compatibility with AGP < 4.2.
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.plugin.flutter.honeywell_scanner'
+    }
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 19
