--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,13 @@
 name: honeywell_scanner
 description: This is a plugin to scan barcodes by using Honeywell PDA Android devices.
-version: 5.0.0+1
+version: 5.0.0+2
 homepage: https://github.com/luis901101/honeywell_scanner
+issue_tracker: https://github.com/luis901101/honeywell_scanner/issues
+topics:
+  - barcode
+  - qrcode
+  - scanner
+  - honeywell
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
