--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,8 @@ description: Demonstrates how to use the honeywell_scanner plugin.
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: '>=3.3.0'
 
 dependencies:
   flutter:
@@ -14,7 +15,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  flutter_lints: ^5.0.0
 
 
 # For information on the generic Dart part of this file, see the
