--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: honeywell_scanner
 description: This is a plugin to scan barcodes by using Honeywell PDA Android devices.
-version: 5.0.0+2
+version: 6.0.0
 homepage: https://github.com/luis901101/honeywell_scanner
 issue_tracker: https://github.com/luis901101/honeywell_scanner/issues
 topics:
@@ -20,7 +20,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.4
+  lints: ^5.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
